数式を記載する仕組みを導入

--- a/public/index.html
+++ b/public/index.html
@@ -58,6 +58,9 @@
 
             
             <footer id="footer">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
     <p class="copyright">
         
         Design: <a href="https://html5up.net">HTML5 UP</a>.
