--- a/public/404.html
+++ b/public/404.html
@@ -42,6 +42,9 @@
 
             
             <footer id="footer">
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
+
     <p class="copyright">
         
         Design: <a href="https://html5up.net">HTML5 UP</a>.
